--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -48,13 +48,14 @@
     <string name="config_mainBuiltInDisplayCutout">M -580,0 L -500,0 L -500,115 L -580,115 Z</string>
 
     <!-- Height of area above QQS where battery/time go. -->
-    <dimen name="quick_qs_offset_height">@dimen/status_bar_height_portrait</dimen>
+    <dimen name="quick_qs_offset_height">@dimen/status_bar_height</dimen>
     
     <!-- The default peak refresh rate for a given device. Change this value if you want to allow
          for higher refresh rates to be automatically used out of the box -->
     <integer name="config_defaultPeakRefreshRate">120</integer>
     
     <!-- Height of the status bar -->
-    <dimen name="status_bar_height_landscape">24.0dip</dimen>
-    <dimen name="status_bar_height_portrait">115.0px</dimen>
+    <dimen name="status_bar_height">115px</dimen>
+    <dimen name="status_bar_height_landscape">24dp</dimen>
+    <dimen name="status_bar_height_portrait">115px</dimen>
 </resources>
