--- a/rro_overlays/FrameworkOverlay/res/values/config.xml
+++ b/rro_overlays/FrameworkOverlay/res/values/config.xml
@@ -45,17 +45,43 @@
     <string name="config_mms_user_agent_profile_url" translatable="false">http://www.google.com/oha/rdf/ua-profile-kila.xml</string>
 
     <!-- UI -->
-    <string name="config_mainBuiltInDisplayCutout">M -580,0 L -500,0 L -500,115 L -580,115 Z</string>
+    <string name="config_mainBuiltInDisplayCutout">M -580,0 L -500,0 L -500,115 L -580,115 Z @right</string>
 
     <!-- Height of area above QQS where battery/time go. -->
-    <dimen name="quick_qs_offset_height">@dimen/status_bar_height</dimen>
-    
-    <!-- The default peak refresh rate for a given device. Change this value if you want to allow
-         for higher refresh rates to be automatically used out of the box -->
-    <integer name="config_defaultPeakRefreshRate">120</integer>
-    
-    <!-- Height of the status bar -->
+    <dimen name="quick_qs_offset_height">@dimen/status_bar_height_portrait</dimen>
+
+    <!-- Height of the status bar in landscape. The height should be
+         Max((status bar content height + waterfall top size), top cutout size) -->
+    <dimen name="status_bar_height_landscape">24dip</dimen>
+
+    <!-- Height of the status bar.
+         Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
+         -->
+    <dimen name="config_viewConfigurationTouchSlop">16dp</dimen>
     <dimen name="status_bar_height">115px</dimen>
-    <dimen name="status_bar_height_landscape">24dp</dimen>
     <dimen name="status_bar_height_portrait">115px</dimen>
+    <dimen name="status_bar_height_default">@*dimen/status_bar_height_portrait</dimen>
+
+    <!-- The padding of the rounded corners -->
+    <dimen name="rounded_corner_content_padding">9dp</dimen>
+
+    <!-- Whether to show min/max refresh rate in display settings -->
+    <bool name="config_show_refresh_rate_controls">true</bool>
+    <bool name="config_supports_dynamic_refresh_rate_controls">false</bool>
+
+    <!-- The default refresh rate for a given device. Change this value to set a higher default
+         refresh rate. If the hardware composer on the device supports display modes with a higher
+         refresh rate than the default value specified here, the framework may use those higher
+         refresh rate modes if an app chooses one by setting preferredDisplayModeId or calling
+         setFrameRate().
+         If a non-zero value is set for config_defaultPeakRefreshRate, then
+         config_defaultRefreshRate may be set to 0, in which case the value set for
+         config_defaultPeakRefreshRate will act as the default frame rate. -->
+    <integer name="config_defaultRefreshRate">120</integer>
+
+    <!-- The default peak refresh rate for a given device. Change this value if you want to prevent
+         the framework from using higher refresh rates, even if display modes with higher refresh
+         rates are available from hardware composer. Only has an effect if the value is
+         non-zero. -->
+    <integer name="config_defaultPeakRefreshRate">120</integer>    
 </resources>
